--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 <body>
 
   <!-- header area start -->
-  <header class="header_area">
+  <header class="header_area position-relative">
     <nav class="navbar navbar-expand-lg d-none d-lg-block">
       <div class="container ps-0">
         <a class="navbar-brand me-0" href="index.html">
@@ -62,10 +62,93 @@
         </div>
       </div>
     </nav>
+    <div class="d-lg-none position-absolute start-0 end-0">
+      <div class="row justify-content-center py-3 py-lg-4">
+        <div class="col-12">
+          <div class="logo-wrapper w-100 d-flex align-items-center">
+            <div class="sm-logo me-auto ms-4">
+              <a href="index.html">
+                <img src="./images/sm-logo.png" alt="farooq">
+              </a>
+            </div>
+            <div class="search pe-4">
+              <div class="bars">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </div>
+            </div>
+            <div class="mobile-topbar me-4">
+              <div class="bars">
+                <i class="fas fa-bars"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
-  
   <!-- header area end -->
 
+   <!-- mobile navbar part start -->
+   <div class="mobile-menu d-lg-none">
+    <div class="mobile-menu-overlay"></div>
+
+    <div class="mobile-menu-main">
+    <div class="close-m-menu text-end"><i class="fas fa-times"></i></div>
+    <div class="menu-body">
+    <div class="menu-list">
+      <ul class="list-unstyled">
+        <li class="mobile-sub-menu">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="mobile-sub-menu">
+          <a href="#">About Us<i class="fas fa-sort-down float-end"></i></a>
+          <ul class="list-unstyled">
+            <li><a href="about.html">About</a></li>
+            <li><a href="founder-message.html">Message from the Founder</a></li>
+            <li><a href="people.html">People</a></li>
+          </ul>
+        </li>
+        <li class="mobile-sub-menu"><a href="areas-of-practice.html">Areas of Practice</a></li>
+        <li class="mobile-sub-menu"><a href="projects.html">Projects</a></li>
+        <li class="mobile-sub-menu"><a href="contact.html">Contact Us</a>
+        </li>
+      </ul>
+    </div>
+    </div>
+    </div>
+  </div>
+<!-- mobile navbar part end -->
+
+ <!-- mobile navbar part start -->
+ <div class="mobile-menu d-lg-none">
+  <div class="mobile-menu-overlay"></div>
+
+  <div class="mobile-menu-main">
+  <div class="close-m-menu text-end"><i class="fas fa-times"></i></div>
+  <div class="menu-body">
+  <div class="menu-list">
+    <ul class="list-unstyled">
+      <li class="mobile-sub-menu">
+        <a href="index.html">Home</a>
+      </li>
+      <li class="mobile-sub-menu">
+        <a href="#">About Us<i class="fas fa-sort-down float-end"></i></a>
+        <ul class="list-unstyled">
+          <li><a href="about.html">About</a></li>
+          <li><a href="founder-message.html">Message from the Founder</a></li>
+          <li><a href="people.html">People</a></li>
+        </ul>
+      </li>
+      <li class="mobile-sub-menu"><a href="areas-of-practice.html">Areas of Practice</a></li>
+      <li class="mobile-sub-menu"><a href="projects.html">Projects</a></li>
+      <li class="mobile-sub-menu"><a href="contact.html">Contact Us</a>
+      </li>
+    </ul>
+  </div>
+  </div>
+  </div>
+</div>
+<!-- mobile navbar part end -->
 
   <!-- main area start -->
   <main>
@@ -136,7 +219,7 @@
           <div class="col-lg-12">
             <div class="text">
               
-              <h3 class="title text-center">Foreign Investment – an area of expertise and a social endeavour</h3>
+              <h2 class="title text-center">Foreign Investment – an area of expertise and a social endeavour</h2>
 
               <h4>Bangladesh, a developing country and an emerging economy with promising potential, attracts a notable amount of foreign investment, however, with the existing, often unwieldy, regulatory environment, foreign investors regularly find themselves in precarious situations through which they have to navigate their investments.</h4>
 
@@ -170,14 +253,14 @@
     <i class="fas fa-angle-up"></i>
   </button>
   <!-- scroll top part end -->
-
+  
   <!-- footer part start -->
   <footer class="footer_area">
     <div class="footer-bg">
       <div class="container">
         <div class="row">
           <div class="col-lg-4">
-            <div class="footer-widget pe-4">
+            <div class="footer-widget">
               <h3 class="footer-title">Main Office</h3>
               <div class="contact_us">
                 <ul class="list-unstyled">
@@ -207,7 +290,7 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="footer-widget px-5">
+            <div class="footer-widget ps-lg-5 pt-4 pt-lg-0">
               <h3 class="footer-title">Supreme Court Office</h3>
               <div class="contact_us">
                 <ul class="list-unstyled">
@@ -232,11 +315,11 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="footer-widget ps-5">
+            <div class="footer-widget ps-lg-5 pt-4 pt-lg-0">
               <h3 class="footer-title">Accessibility</h3>
               <p>There is step-free access to chambers from the ground floor.</p>
             </div>
-            <div class="footer-widget mt-4 ps-5">
+            <div class="footer-widget ps-lg-5 pt-4">
               <h3 class="footer-title">Legal</h3>
               <ul class="list-unstyled services">
                 <li><a href="#">Privacy Policy</a></li>
