--- a/areas-of-practice.html
+++ b/areas-of-practice.html
@@ -21,7 +21,7 @@
 
 <body>
   <!-- header area start -->
-  <header class="header_area">
+  <header class="header_area position-relative">
     <nav class="navbar navbar-expand-lg d-none d-lg-block">
       <div class="container ps-0">
         <a class="navbar-brand me-0" href="index.html">
@@ -60,8 +60,62 @@
         </div>
       </div>
     </nav>
+    <div class="d-lg-none position-absolute start-0 end-0">
+      <div class="row justify-content-center py-3 py-lg-4">
+        <div class="col-12">
+          <div class="logo-wrapper w-100 d-flex align-items-center">
+            <div class="sm-logo me-auto ms-4">
+              <a href="index.html">
+                <img src="./images/sm-logo.png" alt="farooq">
+              </a>
+            </div>
+            <div class="search pe-4">
+              <a href="search.html" class="bars">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </a>
+            </div>
+            <div class="mobile-topbar me-4">
+              <div class="bars">
+                <i class="fas fa-bars"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
   <!-- header area end -->
+
+   <!-- mobile navbar part start -->
+   <div class="mobile-menu d-lg-none">
+    <div class="mobile-menu-overlay"></div>
+
+    <div class="mobile-menu-main">
+    <div class="close-m-menu text-end"><i class="fas fa-times"></i></div>
+    <div class="menu-body">
+    <div class="menu-list">
+      <ul class="list-unstyled">
+        <li class="mobile-sub-menu">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="mobile-sub-menu">
+          <a href="#">About Us<i class="fas fa-sort-down float-end"></i></a>
+          <ul class="list-unstyled">
+            <li><a href="about.html">About</a></li>
+            <li><a href="founder-message.html">Message from the Founder</a></li>
+            <li><a href="people.html">People</a></li>
+          </ul>
+        </li>
+        <li class="mobile-sub-menu"><a href="areas-of-practice.html">Areas of Practice</a></li>
+        <li class="mobile-sub-menu"><a href="projects.html">Projects</a></li>
+        <li class="mobile-sub-menu"><a href="contact.html">Contact Us</a>
+        </li>
+      </ul>
+    </div>
+    </div>
+    </div>
+  </div>
+<!-- mobile navbar part end -->
 
   <!-- main area start -->
   <main>
@@ -83,43 +137,43 @@
     <section class="practice_area practice_area_page">
       <div class="container">
         <div class="row area-wrapper">
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice1.jpg" alt="farooq">
               <div class="overly">
                 <h3>
-                  <span>
+                  <p>
                     Technology, Media And Telecommunication
-                  </span>
+                  </p>
                 </h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice2.jpg" alt="farooq">
               <div class="overly">
-                <h3><span>Employment And Labor</span></h3>
+                <h3><p>Employment And Labor</p></h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice3.jpg" alt="farooq">
               <div class="overly">
-                  <h3><span>Customs And Taxation</span></h3>
+                  <h3><p>Customs And Taxation</p></h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice4.jpg" alt="farooq">
               <div class="overly">
-                  <h3><span>Power And Energy</span></h3>
+                  <h3><p>Power And Energy</p></h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice5.jpg" alt="farooq">
               <div class="overly">
@@ -131,75 +185,75 @@
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice6.jpg" alt="farooq">
               <div class="overly">
-                <h3><span>Structured and Project Finance</span></h3>
+                <h3><p>Structured and Project Finance</p></h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice7.jpg" alt="farooq">
               <div class="overly">
-                  <h3><span>Corporate</span></h3>
+                  <h3><p>Corporate</p></h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice8.png" alt="farooq">
               <div class="overly">
-                  <h3><span>Capital Market</span></h3>
+                  <h3><p>Capital Market</p></h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice9.jpg" alt="farooq">
               <div class="overly">
-                  <h3><span>Corporate Finance</span></h3>
+                  <h3><p>Corporate Finance</p></h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice10.png" alt="farooq">
               <div class="overly">
-                  <h3><span>Insolvency and Debt Recovery</span></h3>
+                  <h3><p>Insolvency and Debt Recovery</p></h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice11.jpg" alt="farooq">
               <div class="overly">
-                  <h3><span>Shipping and Maritime</span></h3>
+                  <h3><p>Shipping and Maritime</p></h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice12.jpg" alt="farooq">
               <div class="overly">
-                  <h3><span>Intellectual Property</span></h3>
+                  <h3><p>Intellectual Property</p></h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice13.jpg" alt="farooq">
               <div class="overly">
-                  <h3><span>Litigation, Arbitration & Dispute Settlement</span></h3>
+                  <h3><p>Litigation, Arbitration & Dispute Settlement</p></h3>
               </div>
             </a>
           </div>
-          <div class="col-3 pb-4">
+          <div class="col-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice14.jpg" alt="farooq">
               <div class="overly">
-                  <h3><span>Regulatory Affairs of Public Bodies</span></h3>
+                  <h3><p>Regulatory Affairs of Public Bodies</p></h3>
               </div>
             </a>
           </div>
@@ -222,7 +276,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4">
-            <div class="footer-widget pe-4">
+            <div class="footer-widget">
               <h3 class="footer-title">Main Office</h3>
               <div class="contact_us">
                 <ul class="list-unstyled">
@@ -252,7 +306,7 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="footer-widget px-5">
+            <div class="footer-widget ps-lg-5 pt-4 pt-lg-0">
               <h3 class="footer-title">Supreme Court Office</h3>
               <div class="contact_us">
                 <ul class="list-unstyled">
@@ -277,11 +331,11 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="footer-widget ps-5">
+            <div class="footer-widget ps-lg-5 pt-4 pt-lg-0">
               <h3 class="footer-title">Accessibility</h3>
               <p>There is step-free access to chambers from the ground floor.</p>
             </div>
-            <div class="footer-widget mt-4 ps-5">
+            <div class="footer-widget ps-lg-5 pt-4">
               <h3 class="footer-title">Legal</h3>
               <ul class="list-unstyled services">
                 <li><a href="#">Privacy Policy</a></li>
