--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <!-- header area start -->
-  <header class="header_area">
+  <header class="header_area position-relative">
     <nav class="navbar navbar-expand-lg d-none d-lg-block">
       <div class="container ps-0">
         <a class="navbar-brand me-0" href="index.html">
@@ -61,32 +61,25 @@
         </div>
       </div>
     </nav>
-    <div class="container d-lg-none">
+    <div class="d-lg-none position-absolute start-0 end-0">
       <div class="row justify-content-center py-3 py-lg-4">
         <div class="col-12">
-          <div class="logo-wrapper w-100 d-flex flex-wrap flex-sm-nowrap">
-            <div class="ms-auto mobile-topbar me-4">
+          <div class="logo-wrapper w-100 d-flex align-items-center">
+            <div class="sm-logo me-auto ms-4">
+              <a href="index.html">
+                <img src="./images/sm-logo.png" alt="farooq">
+              </a>
+            </div>
+            <div class="search pe-4">
+              <a href="search.html" class="bars">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </a>
+            </div>
+            <div class="mobile-topbar me-4">
               <div class="bars">
                 <i class="fas fa-bars"></i>
               </div>
             </div>
-            <!-- <div class="logo me-sm-2">
-              <a href="index.php">
-                <img src="images/main-logo.png" alt="header">
-              </a>
-            </div>
-            <div class="header-form">
-              <form action="#">
-                <div class="form-main d-flex justify-content-between">
-                  <div class="input-field">
-                    <input type="text" class="form-control rounded-0 shadow-none" placeholder="I'm searching for...">
-                  </div>
-                  <div class="search d-flex justify-content-center align-items-center">
-                    <img src="./images/search.png" alt="not found">
-                  </div>
-                </div>
-              </form>
-            </div> -->
           </div>
         </div>
       </div>
@@ -95,36 +88,34 @@
   <!-- header area end -->
 
  <!-- mobile navbar part start -->
+  <div class="mobile-menu d-lg-none">
+    <div class="mobile-menu-overlay"></div>
 
- <div class="mobile-menu d-lg-none">
-
-  <div class="mobile-menu-overlay"></div>
-
-  <div class="mobile-menu-main">
+    <div class="mobile-menu-main">
     <div class="close-m-menu text-end"><i class="fas fa-times"></i></div>
     <div class="menu-body">
-      <div class="menu-list">
-        <ul class="list-unstyled">
-          <li class="mobile-sub-menu">
-            <a href="index.html">Home</a>
-          </li>
-          <li class="mobile-sub-menu">
-            <a href="#">About Us<i class="fas fa-sort-down float-end"></i></a>
-            <ul class="list-unstyled">
-              <li><a href="about.html">About</a></li>
-              <li><a href="founder-message.html">Message from the Founder</a></li>
-              <li><a href="people.html">People</a></li>
-            </ul>
-          </li>
-          <li class="mobile-sub-menu"><a href="areas-of-practice.html">Areas of Practice</a></li>
-          <li class="mobile-sub-menu"><a href="projects.html">Projects</a></li>
-          <li class="mobile-sub-menu"><a href="contact.html">Contact Us</a>
-          </li>
-        </ul>
-      </div>
+    <div class="menu-list">
+      <ul class="list-unstyled">
+        <li class="mobile-sub-menu">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="mobile-sub-menu">
+          <a href="#">About Us<i class="fas fa-sort-down float-end"></i></a>
+          <ul class="list-unstyled">
+            <li><a href="about.html">About</a></li>
+            <li><a href="founder-message.html">Message from the Founder</a></li>
+            <li><a href="people.html">People</a></li>
+          </ul>
+        </li>
+        <li class="mobile-sub-menu"><a href="areas-of-practice.html">Areas of Practice</a></li>
+        <li class="mobile-sub-menu"><a href="projects.html">Projects</a></li>
+        <li class="mobile-sub-menu"><a href="contact.html">Contact Us</a>
+        </li>
+      </ul>
+    </div>
+    </div>
     </div>
   </div>
-</div>
 <!-- mobile navbar part end -->
 
   <!-- main area start -->
@@ -345,60 +336,64 @@
         
         <div class="bg-static w-100">
           <div class="area-wrapper">
-            <div class="row justify-content-center mx-3 mx-xxl-0">
-              <div class="col-12 col-xl-6 col-xxl-4 px-0">
-                <a class="image" href="#">
-                  <img src="./images/area1.jpg" alt="farooq">
-                  <div class="overly">
-                    <h3>
-                      <span>
-                        Structured and Project Finance
-                      </span>
-                    </h3>
+            <div class="row justify-content-center">
+              <div class="col-12 col-xxl-9">
+                <div class="row justify-content-center mx-3 mx-xxl-0">
+                  <div class="col-12 col-xl-6 col-xxl-6 px-0">
+                    <a class="image" href="#">
+                      <img src="./images/area1.jpg" alt="farooq">
+                      <div class="overly">
+                        <h3>
+                          <span>
+                            Structured and Project Finance
+                          </span>
+                        </h3>
+                      </div>
+                    </a>
                   </div>
-                </a>
-              </div>
-              <div class="col-6 col-xl-3 col-xxl-2 px-0">
-                <a class="image" href="#">
-                  <img src="./images/area2.jpg" alt="farooq">
-                  <div class="overly">
-                    <h3><span>Regulatory Affairs of Public Bodies</span></h3>
+                  <div class="col-6 col-xl-3 col-xxl-3 px-0">
+                    <a class="image" href="#">
+                      <img src="./images/area2.jpg" alt="farooq">
+                      <div class="overly">
+                        <h3><span>Regulatory Affairs of Public Bodies</span></h3>
+                      </div>
+                    </a>
                   </div>
-                </a>
-              </div>
-              <div class="col-6 col-xl-3 col-xxl-2 px-0">
-                <a class="image" href="#">
-                  <img src="./images/area3.jpg" alt="farooq">
-                  <div class="overly">
-                      <h3><span>Intellectual Property</span></h3>
+                  <div class="col-6 col-xl-3 col-xxl-3 px-0">
+                    <a class="image" href="#">
+                      <img src="./images/area3.jpg" alt="farooq">
+                      <div class="overly">
+                          <h3><span>Intellectual Property</span></h3>
+                      </div>
+                    </a>
                   </div>
-                </a>
-              </div>
-            </div>
-            <div class="row justify-content-center mx-3 mx-xxl-0">
-              <div class="col-6 col-xl-3 col-xxl-2 px-0">
-                <a class="image" href="#">
-                  <img src="./images/area4.png" alt="farooq">
-                  <div class="overly">
-                      <h3><span>Insolvency and Debt Recovery</span></h3>
+                </div>
+                <div class="row justify-content-center mx-3 mx-xxl-0">
+                  <div class="col-6 col-xl-3 col-xxl-3 px-0">
+                    <a class="image" href="#">
+                      <img src="./images/area4.png" alt="farooq">
+                      <div class="overly">
+                          <h3><span>Insolvency and Debt Recovery</span></h3>
+                      </div>
+                    </a>
                   </div>
-                </a>
-              </div>
-              <div class="col-6 col-xl-3 col-xxl-2 px-0">
-                <a class="image" href="#">
-                  <img src="./images/area5.jpg" alt="farooq">
-                  <div class="overly">
-                      <h3><span>Shipping and Maritime</span></h3>
+                  <div class="col-6 col-xl-3 col-xxl-3 px-0">
+                    <a class="image" href="#">
+                      <img src="./images/area5.jpg" alt="farooq">
+                      <div class="overly">
+                          <h3><span>Shipping and Maritime</span></h3>
+                      </div>
+                    </a>
                   </div>
-                </a>
-              </div>
-              <div class="col-12 col-xl-6 col-xxl-4 px-0">
-                <a class="image" href="#">
-                  <img src="./images/area6.jpg" alt="farooq">
-                  <div class="overly">
-                      <h3><span>Litigation, Arbitration & Dispute Settlement</span></h3>
+                  <div class="col-12 col-xl-6 col-xxl-6 px-0">
+                    <a class="image" href="#">
+                      <img src="./images/area6.jpg" alt="farooq">
+                      <div class="overly">
+                          <h3><span>Litigation, Arbitration & Dispute Settlement</span></h3>
+                      </div>
+                    </a>
                   </div>
-                </a>
+                </div>
               </div>
             </div>
           </div>
